--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <p>Click the button below to download your file:</p>
 
   <!-- Direct download button -->
-  <a href="files/mydocument.pdf" download>
+  <a href="golang_programs.pdf" download>
     <button>Download PDF</button>
   </a>
 </body>
